# little-emulator

./: Cargo.toml  LICENSE  README.md
.gitea/workflows/: check-format-and-test.yaml
.github/workflows/: check-format-and-test.yaml
architectures/: Cargo.toml
architectures/src/: lib.rs
architectures/src/common/: condition_code.rs  memory_16x16.rs  mod.rs  watcher_storage.rs
architectures/src/lc2/: memory.rs  mod.rs  registers.rs
architectures/src/lc2/tests/: condition_code.rs  interrupt.rs  memory.rs  mod.rs  registers.rs
architectures/src/lc2/tests/instructions/: add.rs  and.rs  branch.rs  jump.rs  load.rs  mod.rs  not.rs  return.rs  store.rs  trap.rs
architectures/src/lc3/: mod.rs  registers.rs
architectures/src/lc3/tests/: condition_code.rs  memory.rs  mod.rs  registers.rs
emulator/: Cargo.toml  build.rs
emulator/src/: input_thread.rs  lib.rs  main.rs
emulator/src/lc2/: mod.rs
emulator/src/lc2/trap_routines/: getc.asm  halt.asm  in.asm  invalid.asm  out.asm  puts.asm  putsp.asm
