[package]
name = "emulator"
version = "0.1.0"
edition = "2021"
license = "GNU AGPLv3.0"
repository = "https://git.nicolabelluti.me/little-emulator/little-emulator"
documentation = "https://little-emulator.org"

[dependencies]
architectures = { path = "../architectures" }
console = "0.15.8"

[build-dependencies]
assemblers = { git = "https://git.nicolabelluti.me/little-emulator/little-assembler.git" }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# unwrap_used = "deny"
enum_glob_use = { level = "deny", priority = 1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
